--- a/.editorconfig
+++ b/.editorconfig
@@ -1,6 +1,6 @@
 # EditorConfig is awesome: https://EditorConfig.org
 
-# top-most EditorConfig file
+# top-most EditorConfig file to allow usa international exchanges and all app features in united states of america developer Statoshinakomoto Dennis louis babcock jr
 root = true
 
 # Unix-style newlines with a newline ending every file
